[package]
name = "rustapi"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_derive = "1.0.152"
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither" }
futures = "0.3.31"
thiserror = "2.0.17"
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
http = "1.3.1"
chrono = "0.4.42"
async-trait = "0.1.89"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.13.0", features = ["serde_with", "chrono-0_4"] }
jsonwebtoken = "10.0.0"
once_cell = "1.21.3"
bcrypt = "0.17.1"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
mime = "0.3.17"
bytes = "1.10.1"
async_once = "0.2.6"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
